added final scipy, test and oop tutorials

--- a/data_types/answers_1.ipynb
+++ b/data_types/answers_1.ipynb
@@ -9,19 +9,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from expects import expect, equal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "sentence = \"I owe my friends all I have.\"\n",
-    "def exercise1(sentence):\n",
-    "    l = sentence[-9]\n",
-    "    o = sentence [2]\n",
-    "    v = sentence[-3]\n",
-    "    e = sentence[-2]\n",
-    "    return l + o + v + e\n",
     "\n",
-    "assert exercise1(sentence) == \"love\""
+    "l = sentence[-9]\n",
+    "o = sentence [2]\n",
+    "v = sentence[-3]\n",
+    "e = sentence[-2]\n",
+    "x =  l + o + v + e\n",
+    "\n",
+    "expect(x).to(equal(\"love\"))"
    ]
   },
   {
@@ -33,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,15 +51,15 @@
     "Dug a trench out, laid down there\n",
     "With a shovel up out of reach somewhere\"\"\"\n",
     "\n",
-    "def exercise2(sentence):\n",
-    "    somewhere = sentence[-9:]\n",
-    "    _is = sentence[6:8]\n",
-    "    the = sentence[-45:-42]\n",
-    "    truth = sentence[:5]\n",
-    "    space = sentence[5]\n",
-    "    return somewhere + space + _is + space + the + space + truth\n",
+    "somewhere = sentence[-9:]\n",
+    "_is = sentence[6:8]\n",
+    "the = sentence[-45:-42]\n",
+    "truth = sentence[:5]\n",
+    "space = sentence[5]\n",
+    "x =  somewhere + space + _is + space + the + space + truth\n",
     "\n",
-    "assert exercise2(sentence) == \"somewhere is the Truth\""
+    "expect(x).to(equal(\"somewhere is the Truth\"))\n",
+    "\n"
    ]
   },
   {
@@ -62,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,11 +113,9 @@
     "    'Procedure:'\n",
     "    ]\n",
     "\n",
-    "def exercise3(l):\n",
-    "    x = l[-3: len(l)]\n",
-    "    return x\n",
+    "x = random_list[-3: len(random_list)]\n",
     "\n",
-    "assert exercise3(random_list) == ['Diagnosis:', 'Diagnosis 2:', 'Procedure:'] "
+    "expect(x).to(equal(['Diagnosis:', 'Diagnosis 2:', 'Procedure:'] ))"
    ]
   },
   {
@@ -120,16 +127,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "numb = 9.32\n",
-    "def exercise4(numb):\n",
-    "    x = (numb / 2, int(numb), numb ** 4)\n",
-    "    return x\n",
-    "\n",
-    "assert exercise4(numb) == (4.66, 9, 7545.0765337600005)"
+    "x = (numb / 2, int(numb), numb ** 4)\n",
+    "expect(x).to(equal((4.66, 9, 7545.0765337600005)))"
    ]
   },
   {
@@ -141,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,11 +154,10 @@
     "inner_dictionary = {'key 1': 'value 1'}\n",
     "outer_dictionary['inner'] = inner_dictionary\n",
     "\n",
-    "def exercise5(outer_dictionary):\n",
-    "    x = outer_dictionary['inner']['key 1']\n",
-    "    return x\n",
     "\n",
-    "assert exercise5(outer_dictionary) == 'value 1'"
+    "x = outer_dictionary['inner']['key 1']\n",
+    "\n",
+    "expect(x).to(equal(\"value 1\"))"
    ]
   }
  ],
@@ -175,9 +177,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
