--- a/data_types/solutionnaire_1.ipynb
+++ b/data_types/solutionnaire_1.ipynb
@@ -13,16 +13,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from expects import expect, equal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "entrant = \"C'est pour que s'accomplisse notre prière\"\n",
-    "def exercice1(entrant):\n",
-    "    s = entrant[3]\n",
-    "    a = entrant[17]\n",
-    "    l = entrant[23]\n",
-    "    u = entrant[8]\n",
-    "    t = entrant[4]\n",
-    "    return s + a + l + u + t\n",
     "\n",
-    "assert exercice1(entrant) == \"salut\""
+    "s = entrant[3]\n",
+    "a = entrant[17]\n",
+    "l = entrant[23]\n",
+    "u = entrant[8]\n",
+    "t = entrant[4]\n",
+    "x =  s + a + l + u + t\n",
+    "\n",
+    "expect(x).to(equal(\"salut\"))"
    ]
   },
   {
@@ -34,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,15 +54,13 @@
     "Je n'arrête pas de pleurer\n",
     "\"\"\"\n",
     "\n",
-    "def exercise2(entrant):\n",
-    "    ta = entrant[53:55]\n",
-    "    belle = entrant[70:75]\n",
-    "    lune = entrant[7:11]\n",
-    "    pleure = entrant[-8: -2]\n",
-    "    esp = entrant[3]\n",
-    "    return ta + esp + belle + esp + lune + esp + pleure\n",
-    "\n",
-    "assert exercise2(phrase) == \"ta belle lune pleure\""
+    "ta = phrase[53:55]\n",
+    "belle = phrase[70:75]\n",
+    "lune = phrase[7:11]\n",
+    "pleure = phrase[-8: -2]\n",
+    "esp = phrase[3]\n",
+    "x = ta + esp + belle + esp + lune + esp + pleure\n",
+    "expect(x).to(equal(\"ta belle lune pleure\"))"
    ]
   },
   {
@@ -65,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,11 +114,9 @@
     "    'Procedure:'\n",
     "    ]\n",
     "\n",
-    "# Exercice 3:\n",
-    "def exercice3(entrant):\n",
-    "    return entrant[-3: len(entrant)]\n",
+    "x = liste_aleatoire[-3: len(liste_aleatoire)]\n",
     "\n",
-    "assert exercice3(liste_aleatoire) == ['Diagnosis:', 'Diagnosis 2:', 'Procedure:'] \n"
+    "expect(x).to(equal(['Diagnosis:', 'Diagnosis 2:', 'Procedure:'] ))\n"
    ]
   },
   {
@@ -123,15 +128,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "entrant = 9.32\n",
-    "def exercice4(entrant):\n",
-    "    return (entrant / 2, int(entrant), entrant ** 4)\n",
     "\n",
-    "assert exercice4(entrant) == (4.66, 9, 7545.0765337600005)"
+    "x = (entrant / 2, int(entrant), entrant ** 4)\n",
+    "\n",
+    "expect(x).to(equal((4.66, 9, 7545.0765337600005)))"
    ]
   },
   {
@@ -143,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,10 +158,9 @@
     "dictionnaire_interieur = {'clé 1': 'valeur 1'}\n",
     "dictionnaire_de_dictionnaire['interieur'] = dictionnaire_interieur\n",
     "\n",
-    "def exercice5(entrant):\n",
-    "    return entrant['interieur']['clé 1']\n",
+    "x = dictionnaire_de_dictionnaire['interieur']['clé 1']\n",
     "\n",
-    "assert exercice5(dictionnaire_de_dictionnaire) == 'valeur 1'"
+    "expect(x).to(equal('valeur 1'))"
    ]
   }
  ],
@@ -176,9 +180,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
