--- a/functions/Solutionnaire.ipynb
+++ b/functions/Solutionnaire.ipynb
@@ -2,20 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Exercice!\n",
     "> Écrivez une fonction qui calcule la valeur absolue de quelconque nombre.\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import random\n",
+    "from expects import expect, equal\n",
     "\n",
     "def mon_abs(nomb):\n",
     "    if nomb < 0:\n",
@@ -25,32 +34,34 @@
     "# generate 20 random numbers from -100 to 100\n",
     "test_nombres = random.sample(range(-100, 100), 20)\n",
     "\n",
+    "\n",
+    "expect\n",
     "for nombre_aleatoire in test_nombres:\n",
-    "    assert mon_abs(nombre_aleatoire) == abs(nombre_aleatoire)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+    "    expect(mon_abs(nombre_aleatoire)).to(equal(abs(nombre_aleatoire)))"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Exercice !\n",
     "> Écrivez une fonction qui prend une liste en entrée et retourne une nouvelle liste avec les éléments uniques de la \n",
     "première liste ainsi que la proportion des éléments uniques de la première liste sur les éléments totaux de la \n",
     "première liste.\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def unique_elements(liste_entrants):\n",
@@ -63,30 +74,32 @@
     "\n",
     "rep1 = unique_elements([6,13,15,13,67,1,1,1,1])\n",
     "rep1[0].sort()\n",
-    "assert rep1[0] == [1, 6, 13, 15, 67] \n",
-    "assert rep1[1] == 5/9\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+    "\n",
+    "expect(rep1[0]).to(equal([1, 6, 13, 15, 67]))\n",
+    "expect(rep1[1]).to(equal(5/9))\n"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Exercice !\n",
     "> Compléter le corps de la fonction suivante en fonction des instructions dans sa dosctring. INDICE: Python à une \n",
     "fonction `round`.\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def arrondir_a_deux_decimals(num):\n",
@@ -96,20 +109,15 @@
     "    3.14\n",
     "    \"\"\"\n",
     "    return round(num, 2)\n",
-    "    \n",
-    "assert arrondir_a_deux_decimals(3.14159) == 3.14\n",
-    "assert arrondir_a_deux_decimals(0) == 0 \n",
-    "assert arrondir_a_deux_decimals(-99999.99999) == -100000.0\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+    "\n",
+    "expect(arrondir_a_deux_decimals(3.14159)).to(equal(3.14))\n",
+    "expect(arrondir_a_deux_decimals(0))rep1.to(equal(0))\n",
+    "expect(arrondir_a_deux_decimals(-99999.99999)).to(equal(-100000.0))\n"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Exercice!\n",
     "> Qu'es que le code suivant imprime?\n",
@@ -128,40 +136,37 @@
     "Puisque nous appelons a_func() en premier, cette fonction est supposée imrpimer la valeur de a_var. Puisque a_var\n",
     "n'est pas localement définie, l'interpréteur regarde un scope en haut (le global scope) et imprime la valeur globale\n",
     "de a_var. Ensuite, le deuxième print statement affiche évidemment la valeur globale de a_var. \n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
-  },
-  "kernelspec": {
-   "name": "python3",
-   "language": "python",
-   "display_name": "Python 3"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
