--- a/functions/solutions.ipynb
+++ b/functions/solutions.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -15,10 +14,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import random\n",
+    "from expects import expect, equal\n",
     "\n",
     "def my_abs(input_number):\n",
     "    if input_number < 0:\n",
@@ -29,29 +38,30 @@
     "test_numbers = random.sample(range(-100, 100), 20)\n",
     "\n",
     "for random_number in test_numbers:\n",
-    "    assert my_abs(random_number) == abs(random_number)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+    "    expect(my_abs(random_number)).to(equal(abs(random_number)))"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Exercise !\n",
     "> Write a Python function that takes a list and returns a new list with unique elements of the first list as well as \n",
     ">the proportion of unique elements that were found in the input list over the number of elements of the input list.\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def unique_elements(input_list):\n",
@@ -64,29 +74,31 @@
     "\n",
     "ans1 = unique_elements([6,13,15,13,67,1,1,1,1])\n",
     "ans1[0].sort()\n",
-    "assert ans1[0] == [1, 6, 13, 15, 67] \n",
-    "assert ans1[1] == 5/9\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+    "\n",
+    "expect(ans1[0]).to(equal([1, 6, 13, 15, 67]))\n",
+    "expect(ans1[1]).to(equal(5/9))\n"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Exercise!\n",
     "> Complete the body of the following function according to its docstring. HINT: Python has a builtin function `round`\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def round_to_two_places(num):\n",
@@ -97,19 +109,19 @@
     "    \"\"\"\n",
     "    return round(num, 2)\n",
     "    \n",
-    "assert round_to_two_places(3.14159) == 3.14\n",
-    "assert round_to_two_places(0) == 0 \n",
-    "assert round_to_two_places(-99999.99999) == -100000.0\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+    "\n",
+    "expect(round_to_two_places(3.14159)).to(equal(3.14))\n",
+    "expect(round_to_two_places(0)).to(equal(0))\n",
+    "expect(round_to_two_places(-99999.99999)).to(equal(-100000.0))\n"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Exercise!\n",
     "> What does the following code print?\n",
@@ -128,43 +140,37 @@
     "Because we call a_func() first, which is supposed to print the value of a_var. Now, a_var is not locally defined, so \n",
     "it looks up one level up and prints the global value of a_var. Then, the second print obviously prints the global \n",
     "value of a_var"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
-  },
-  "kernelspec": {
-   "name": "python3",
-   "language": "python",
-   "display_name": "Python 3"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
