--- a/loops_numpy/answers.ipynb
+++ b/loops_numpy/answers.ipynb
@@ -9,19 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from expects import expect, equal, contain_exactly, be_within\n",
     "big_arr = np.arange(100).reshape(10, 10)\n",
     "\n",
+    "x = big_arr[-1][:]\n",
     "\n",
-    "def exercise1(arr):\n",
-    "  x = arr[-1][:]\n",
-    "  return x\n",
-    "\n",
-    "assert (exercise1(big_arr) == np.array([90, 91, 92, 93, 94, 95, 96, 97, 98, 99])).all()"
+    "expect(list(x)).to(contain_exactly(*list(np.array([90, 91, 92, 93, 94, 95, 96, 97, 98, 99]))))"
    ]
   },
   {
@@ -33,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,9 +41,9 @@
     "  cond2 = number2 > low_threshold2 and number2 < high_threshold2\n",
     "  return cond1 or cond2\n",
     "\n",
-    "assert exercise2(10, 15, 20, 12, 10, 11) == False\n",
     "\n",
-    "assert exercise2(8, 6, 9, 10, 11, 22) == True\n"
+    "expect(exercise2(10,15,20,12,10,11)).to(equal(False))\n",
+    "expect(exercise2(8, 6, 9, 10, 11, 22)).to(equal(True))"
    ]
   },
   {
@@ -57,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,8 +68,7 @@
     "\n",
     "  return _sum / arr.size\n",
     "\n",
-    "\n",
-    "assert '{:3f}'.format(exercise3(x)) == '{:3f}'.format(np.average(x))"
+    "expect(exercise3(x)).to(be_within(np.average(x) -0.001, np.average(x) + 0.01))"
    ]
   },
   {
@@ -83,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +97,7 @@
     "  return smallest_value\n",
     "\n",
     "row = whr.iloc[39, 1:]\n",
-    "assert exercise4(row) == 28"
+    "expect(exercise4(row)).to(equal(28))"
    ]
   }
  ],
@@ -120,9 +117,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
