--- a/loops_numpy/solutionnaire.ipynb
+++ b/loops_numpy/solutionnaire.ipynb
@@ -9,18 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from expects import expect, equal, contain_exactly, be_within\n",
     "grosse_arr = np.arange(100).reshape(10, 10)\n",
     "\n",
-    "def exercice1(arr):\n",
-    "  x = arr[-1][:]\n",
-    "  return x\n",
+    "x = grosse_arr[-1][:]\n",
     "\n",
-    "assert (exercice1(grosse_arr) == np.array([90, 91, 92, 93, 94, 95, 96, 97, 98, 99])).all()"
+    "expect(list(x)).to(contain_exactly(*list(np.array([90, 91, 92, 93, 94, 95, 96, 97, 98, 99]))))"
    ]
   },
   {
@@ -32,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,9 +41,9 @@
     "  cond2 = nombre2 > seuil_inférieur2 and nombre2 < seul_supérieur2\n",
     "  return cond1 or cond2\n",
     "\n",
-    "assert exercice2(10, 15, 20, 12, 10, 11) == False\n",
     "\n",
-    "assert exercice2(8, 6, 9, 10, 11, 22) == True"
+    "expect(exercice2(10, 15, 20, 12, 10, 11)).to(equal(False))\n",
+    "expect(exercice2(8, 6, 9, 10, 11, 22)).to(equal(True))"
    ]
   },
   {
@@ -56,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +69,7 @@
     "  return somme / arr.size\n",
     "\n",
     "\n",
-    "assert '{:3f}'.format(exercice3(x)) == '{:3f}'.format(np.average(x))"
+    "expect(exercice3(x)).to(be_within(np.average(x) - 0.001, np.average(x) + 0.001))"
    ]
   },
   {
@@ -82,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +97,7 @@
     "  return plus_bas\n",
     "\n",
     "rangée = whr.iloc[39, 1:]\n",
-    "assert exercice4(rangée) == 28"
+    "expect(exercice4(rangée)).to(equal(28))"
    ]
   }
  ],
@@ -118,9 +117,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
