--- a/pandas/answers_2.ipynb
+++ b/pandas/answers_2.ipynb
@@ -11,20 +11,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# prep (already in your notebook - you don't have to reproduce this part)\n",
     "import pandas as pd\n",
-    "star_wars_data = pd.read_csv('starWarsClean.csv')\n",
-    "# --\n",
+    "from expects import expect, equal, contain_exactly\n",
     "\n",
-    "def exercice1(df):\n",
-    "  x = df.loc[2, 'Education'] \n",
-    "  return x\n",
+    "bitcoin_data = pd.read_csv(\"https://raw.githubusercontent.com/erikmagic/python-tutorials/master/pandas/bitcoin_history.csv\")\n",
     "\n",
-    "assert exercice1(star_wars_data) == 'High school degree'"
+    "x = bitcoin_data.loc[2, 'Open']\n",
+    "\n",
+    "expect(x).to(equal('11,096.5'))"
    ]
   },
   {
@@ -36,15 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def exercice2(df):\n",
-    "    x = df.loc[:,['Household_Income']]\n",
-    "    return x\n",
+    "x = bitcoin_data.loc[:, \"Change %\"]\n",
     "\n",
-    "assert exercice2(star_wars_data).equals(pd.read_csv('starWarsClean.csv', usecols=['Household_Income']))"
+    "\n",
+    "expect(list(x)).to((contain_exactly(*list(pd.read_csv(\"https://raw.githubusercontent.com/erikmagic/python-tutorials/master/pandas/bitcoin_history.csv\")[\"Change %\"]))))\n",
+    "\n",
+    "x = bitcoin_data['Change %']\n",
+    "expect(list(x)).to((contain_exactly(*list(pd.read_csv(\"https://raw.githubusercontent.com/erikmagic/python-tutorials/master/pandas/bitcoin_history.csv\")[\"Change %\"]))))"
    ]
   },
   {
@@ -98,13 +99,6 @@
     "\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -123,9 +117,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
