--- a/pandas/solutionnaire2.ipynb
+++ b/pandas/solutionnaire2.ipynb
@@ -9,19 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# préparation (déja dans votre notebook, vous n'avez pas à repreduire cette section)\n",
     "import pandas as pd\n",
-    "star_wars_data = pd.read_csv('starWarsClean.csv')\n",
+    "from expects import expect, equal, contain_exactly\n",
     "\n",
-    "def exercice1(entrant):\n",
-    "  x = entrant.loc[2, 'Education'] # modifier cette variable, vous pouvez en assigner plus\n",
-    "  return x\n",
+    "bitcoin_data = pd.read_csv(\"https://raw.githubusercontent.com/erikmagic/python-tutorials/master/pandas/bitcoin_history.csv\")\n",
     "\n",
-    "assert exercice1(star_wars_data) == 'High school degree'"
+    "x = bitcoin_data.loc[2, 'Open']\n",
+    "\n",
+    "expect(x).to(equal('11,096.5'))"
    ]
   },
   {
@@ -33,15 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def exercice2(entrant):\n",
-    "    x = entrant.loc[:,['Household_Income']]\n",
-    "    return x\n",
+    "x = bitcoin_data.loc[:, \"Change %\"]\n",
     "\n",
-    "assert exercice2(star_wars_data).equals(pd.read_csv('starWarsClean.csv', usecols=['Household_Income']))"
+    "\n",
+    "expect(list(x)).to((contain_exactly(*list(pd.read_csv(\"https://raw.githubusercontent.com/erikmagic/python-tutorials/master/pandas/bitcoin_history.csv\")[\"Change %\"]))))\n",
+    "\n",
+    "x = bitcoin_data['Change %']\n",
+    "expect(list(x)).to((contain_exactly(*list(pd.read_csv(\"https://raw.githubusercontent.com/erikmagic/python-tutorials/master/pandas/bitcoin_history.csv\")[\"Change %\"]))))"
    ]
   },
   {
@@ -111,9 +113,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
