fix typos pour le premier tutoriel python

--- a/data_types/tutoriel_débutant_1.ipynb
+++ b/data_types/tutoriel_débutant_1.ipynb
@@ -29,7 +29,7 @@
     "id": "2YZoCKJJ3CQu"
    },
    "source": [
-    "#### Installation de Python et des packages nécessaires pour ce tutoriel\n",
+    "#### Installation de Python et des packages nécessaires pour ce tutoriel [Optionnel, pas nécessaire pour ce cours!]\n",
     "> 1. Installez Python en suivant ce [lien](https://www.python.org/downloads/) (sélectionnez Python 3.7.3)\n",
     "2. Vérifier que l'installation a fonctionné en cherchant le programme avec la recherche Windows. ![py_search](https://i.ibb.co/x8H7Db7/image.png) \n",
     "3. Télécharger le notebook présent. ![ce_notebook](https://i.ibb.co/wBmYhR8/image.png) \n",
@@ -48,7 +48,7 @@
     "id": "lZJWkl2Qchv-"
    },
    "source": [
-    "## Comment utiliser JupyterLab ou bien Google Colab\n",
+    "## Comment utiliser JupyterLab ou bien Google Colab [Début de l'atelier]\n",
     "> Le truc est d'insérer ses nouvelles lignes de code sur des nouvelles cellules de code afin de bien séparer et organiser son travail.  \n",
     "Afin de créer des cellules, cliquer sur le bouton _+_ par-dessus le notebook. Ensuite, vous pouvez choisir le type de cellule, soit une cellule de texte (*Markdown*) ou bien une cellule de code. Les deuxièmes types de cellules nous intéressent davantage.  \n",
     "Les cellules de code s'empilent comme une pyramide, les variables de chaque cellule sont également disponibles dans les prochaines cellules.\n"
@@ -109,6 +109,31 @@
     "Finalement, pour exécuter une cellule de code, vous n'avez qu'à cliquer sur le bouton play en haut: ![play](https://i.ibb.co/chR1JkB/image.png).  \n",
     "Vous pouvez également appuyez sur *shift et enter*.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting expects\n",
+      "  Downloading https://files.pythonhosted.org/packages/86/9a/4944ecc222f24d18e8d2819800472ffc2668e52986afd5c7bc41ecaf897b/expects-0.9.0.tar.gz\n",
+      "Building wheels for collected packages: expects\n",
+      "  Building wheel for expects (setup.py): started\n",
+      "  Building wheel for expects (setup.py): finished with status 'done'\n",
+      "  Stored in directory: C:\\Users\\eriko\\AppData\\Local\\pip\\Cache\\wheels\\46\\2d\\68\\bd9161b843538746b0e037df6ae3a8037fd1d095d568d2c06d\n",
+      "Successfully built expects\n",
+      "Installing collected packages: expects\n",
+      "Successfully installed expects-0.9.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install expects"
    ]
   },
   {
@@ -232,7 +257,7 @@
    ],
    "source": [
     "intz = int(z)\n",
-    "print(\"int(z) = \".format(intz))\n",
+    "print(\"int(z) = {} \".format(intz))\n",
     "\n",
     "floatz = float(intz)\n",
     "print(\"nouvelle valeur de z après conversion de float à int = \".format(floatz))\n",
@@ -469,8 +494,7 @@
    "source": [
     "#### Exercice 1: \n",
     "> Veuillez écrire \"salut\" en utilisant le indexing et l'addition de strings avec la phrase \n",
-    "\"C'est pour que s'accomplisse notre prière\".  \n",
-    "Içi *def* réfère à une fonction. *None* n'est pas important et vous le devez le changer."
+    "\"C'est pour que s'accomplisse notre prière\". "
    ]
   },
   {
@@ -662,7 +686,6 @@
     "print(\"dernier élément: {}\".format(dernier_element))\n",
     "nouvelle_liste = ma_liste[:2]\n",
     "\n",
-    "assert nouvelle_liste == ma_liste[0:2]\n",
     "nouvelle_liste"
    ]
   },
@@ -1119,7 +1142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
