--- a/data_types/beginner_workshop_1.ipynb
+++ b/data_types/beginner_workshop_1.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Installing Python, required packages and Jupyter Lab\n",
+    "#### Installing Python, required packages and Jupyter Lab [Optional, we skip this section because we run our stuff in colab]\n",
     "> 1. We start by installing Python at the following [url](https://www.python.org/downloads/) (select Python 3.7.3).\n",
     "2. Verify that the intallation worked by looking up for Python in the Windows search bar. ![py_search](https://i.ibb.co/x8H7Db7/image.png)  \n",
     "3. Download this current notebook.  ![ce_notebook](https://i.ibb.co/wBmYhR8/image.png)  \n",
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How to properly use JupyterLab or Google Colab\n",
+    "## How to properly use JupyterLab or Google Colab [We start here]\n",
     "> The trick is to properly segment our code into multiple cells in order to organize our work.\n",
     "To create cells, click on the _+_ button in the toolbar at the top of the notebook. A cell can be of multiple types, its default type is code, but it can also contain markdown text. The dropbar at the end of the top menu allows you to choose which type is you cell. You will mostly use code cells.  \n",
     "Cells are stacked on top of each others, so when you execute one cell, later cells can use the variables declared in this previous cell. "
@@ -83,6 +83,23 @@
     "When working on Jupyter notebooks, you always have to remember the order you execute cells and if some variables you declare have not already been used in previous cells. You have to execute your cells in the good order to not get errors!.  \n",
     "To execute a cell, you need to click on the *play* button on the top menu, or you can type *shift and enter*.  \n",
     "![play](https://i.ibb.co/chR1JkB/image.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: expects in /home/jackson/anaconda3/lib/python3.7/site-packages (0.9.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install expects"
    ]
   },
   {
