--- a/pandas/tutoriel_débutant2.ipynb
+++ b/pandas/tutoriel_débutant2.ipynb
@@ -258,6 +258,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: expects in /home/jackson/anaconda3/lib/python3.7/site-packages (0.9.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install expects"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {
     "colab": {
@@ -1388,7 +1405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# small detour to bin the data\n",
+    "# petit détour pour catégoriser nos données\n",
     "bitcoin_data['numerical_change'] = bitcoin_data['Change %'].str.extract(\"([-+]?\\d+.\\d+)\")[0].astype(\"float\")\n",
     "bitcoin_data['yield'] = pd.cut( bitcoin_data.numerical_change\n",
     "                               , 3\n",
